--- a/source/notebooks/lecture13_numpy_operations_and_linalg_fun.ipynb
+++ b/source/notebooks/lecture13_numpy_operations_and_linalg_fun.ipynb
@@ -48,17 +48,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "a = np.array([0, 1, 2])\n",
     "b = np.array([5, 5, 5])\n",
-    "print(a + b)\n",
-    "print(a * b)"
+    "print(a + b)"
    ]
   },
   {
@@ -78,8 +75,7 @@
    },
    "outputs": [],
    "source": [
-    "print(a + 5)\n",
-    "print(a * 5)"
+    "print(a + 5)"
    ]
   },
   {
@@ -103,9 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "m = np.ones((3, 3))\n",
@@ -115,9 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(a)\n",
@@ -127,9 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a + b.reshape((3, 1))"
@@ -177,9 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "m = np.random.random((3, 4))\n",
@@ -191,23 +179,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "m + n.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "m * n.T"
    ]
   },
   {
@@ -220,9 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"m     =\", m)\n",
@@ -268,9 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"sum(m)   =\", np.nansum(m))\n",
@@ -366,9 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = np.array([[10, 10]])\n",
@@ -379,9 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(a - b)"
@@ -399,9 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "c = np.arange(1, 7).reshape((3, 2))\n",
@@ -411,9 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(10 * c)"
@@ -438,9 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = np.array([[8, -3], [2, 1]])\n",
@@ -452,9 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(d * e)\n",
@@ -464,9 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.matmul(d, e)"
@@ -475,9 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.matmul(e, d)"
@@ -489,7 +444,7 @@
    "source": [
     "#### Cautions\n",
     "\n",
-    "1. In general $ \\mathbf{AB} \\neq \\mathbf{AB}$\n",
+    "1. In general $ \\mathbf{AB} \\neq \\mathbf{BA}$\n",
     "1. $\\mathbf{AB} = 0 $ does not necessarily imply that $\\mathbf{A} = 0 $ or $\\mathbf{B} = 0 $ or $\\mathbf{BA} = 0 $\n",
     "1. $\\mathbf{AC} = \\mathbf{AD} $ does not necessarily imply that $\\mathbf{C} = \\mathbf{D} $, even when $\\mathbf{A} \\neq 0 $\n",
     "\n",
@@ -499,9 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "f = np.array([[1, 1], [2, 2]])\n",
@@ -513,9 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.matmul(f, g)"
@@ -524,9 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.matmul(g, f)"
@@ -535,21 +484,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "h = np.array([[2, 1], [2, 2]])\n",
-    "k = np.array([[3, 0], [1, 3]])"
+    "k = np.array([[3, 0], [1, 3]])\n",
+    "print(f)\n",
+    "print(h)\n",
+    "print(k)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(np.matmul(f, h))\n",
@@ -580,16 +528,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.dot([4, -1, 5], [2, 5, 8])"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "Every entry of $\\mathbf{C} =\\mathbf{AB}$ is an inner product (dot product):\n",
@@ -626,41 +572,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Would you wager a guess as to what a symmetric matrix is? A skew-symmetric matrix? What property must they have?"
+    "Would you wager a guess as to:\n",
+    "\n",
+    "- What a symmetric matrix is? \n",
+    "- A skew-symmetric matrix? \n",
+    "- What property must they have?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How about upper and lower triangular matrices?"
+    "**Answers:**\n",
+    "\n",
+    "- $\\mathbf{A}^T = \\mathbf{A}$ \n",
+    "- $\\mathbf{A}^T = -\\mathbf{A}$ \n",
+    "- They must be square matrices"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Matrices](images/lect13_matrix12.png)"
+    "How about upper and lower triangular matrices?\n",
+    "\n",
+    "Upper triangular matrices have 0 for all elements below the diagonal, and lower triangular matrices have 0 for all elements above the diagonal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Matrices](images/lect13_matrix12.png)\n",
+    "\n",
+    "A nice shortcut available for diagonal matrices:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "f = np.array([[2, 0], [0, 3]])\n",
+    "f = np.diagflat([[2, 3]])\n",
     "print(f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.linalg.matrix_power(f, 3)"
@@ -683,9 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eye = np.eye(2, dtype=int)\n",
@@ -696,9 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.matmul(d, eye)"
@@ -707,9 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.matmul(eye, d)"
@@ -788,9 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "g = np.array([[3, 1], [1, 2]])\n",
@@ -801,9 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# checking our work\n",
@@ -813,9 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.matmul(h, g)"
@@ -883,9 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "m = np.array([[6, 1, 1], [4, -2, 5], [2, 8, 7]])\n",
@@ -895,9 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.linalg.det(m)"
