Minor updates in class to lect 14 &15

--- a/source/notebooks/lecture14_vectors_and_linear_transformations.ipynb
+++ b/source/notebooks/lecture14_vectors_and_linear_transformations.ipynb
@@ -468,7 +468,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Check solution\n",
@@ -492,7 +494,7 @@
     "\n",
     "always has the **trivial solution** $x_j = 0$. Nontrivial solutions exist if and only if rank **A** < n. If rank **A** < n, these solutions, together with **x = 0** form the **solution space** of the system of equations. \n",
     "\n",
-    "If **x**$_1$ and **x**$_2$ are both solution vectors of a homogenous system of equations, then **x** = $c_1$**x**$_1$ + $c_2$**x**$_2$ is a solution vector of the system of equations (this does *not* hold for homogenous systems). \n",
+    "If **x**$_1$ and **x**$_2$ are both solution vectors of a homogenous system of equations, then **x** = $c_1$**x**$_1$ + $c_2$**x**$_2$ is a solution vector of the system of equations (this does *not* hold for nonhomogenous systems). \n",
     "\n",
     "Homogeneous equations with fewer equations than unknowns always has nontrivial solutions. "
    ]
