Added lects 16 and 17

--- a/source/notebooks/lecture15_eigenvalues_and_eigenvectors.ipynb
+++ b/source/notebooks/lecture15_eigenvalues_and_eigenvectors.ipynb
@@ -23,7 +23,7 @@
     "$$\\mathbf{Ax} = \\lambda \\mathbf{x}$$\n",
     "where **A** is a square matrix, $\\lambda$ is an **eigenvalue** (also called a **characteristic value** or *latent root*), and **x** is the corresponding **eigenvector** or **characteristic vector**. We disregard the trivial solution of **x** = **0** and $\\lambda = 0$.\n",
     "\n",
-    "Thus, multiplying **u** by **A** scales **u** by $\\lambda$.\n",
+    "Thus, multiplying **x** by **A** scales **x** by $\\lambda$.\n",
     "\n",
     "The set of eigenvalues is called the **spectrum** of **A**. The largest of the absolute values of the eigenvalues of **A** is called the **spectral radius** of **A**.\n",
     "\n",
@@ -125,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(eigenvalues)"
@@ -134,7 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# eigenvectors are normalized (unit “length”) eigenvectors\n",
@@ -160,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Always a good idea to check our work:\n",
@@ -174,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "left_check = np.matmul(a, eigvec2)\n",
@@ -196,7 +204,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = np.array([[-2, 2, -3], [2, 1, -6], [-1, -2, 0]])\n",
@@ -214,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mult_sol_d = a + 3*np.eye(3)\n",
@@ -246,7 +258,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(eigenvectors)"
@@ -255,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in range(3):\n",
@@ -273,7 +289,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Now validating our hand solution:\n",
@@ -314,7 +332,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = np.array([[0, 1], [-1, 0]])\n",
@@ -325,7 +345,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(eigenvectors)"
