--- a/source/notebooks/lecture17_databases.ipynb
+++ b/source/notebooks/lecture17_databases.ipynb
@@ -128,10 +128,29 @@
     "    cursor = conn.cursor()\n",
     "    cursor.execute(\n",
     "        \"\"\"CREATE TABLE People\n",
-    "        (first_name TEXT, last_name TEXT, job TEXT, age REAL)\"\"\")\n",
+    "        (first_name TEXT, last_name TEXT, job TEXT, age NUMERIC)\"\"\")\n",
     "    cursor.execute(\n",
     "        \"\"\"INSERT INTO People VALUES (?,?,?,?)\"\"\",\n",
     "        ('Bradley', 'Dice', 'Guest Lecturer', 25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Bradley', 'Dice', 'Guest Lecturer', 25)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with sqlite3.connect(database) as conn:\n",
+    "    results = conn.execute(\"\"\"SELECT * FROM People\"\"\")\n",
+    "    print(list(results))"
    ]
   },
   {
@@ -150,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Bradley', 'Dice', 'Guest Lecturer', 25.0), ('Robert', 'Downey Jr.', 'Iron Man', 53.0), ('Chris', 'Evans', 'Captain America', 37.0), ('Scarlett', 'Johansson', 'Black Widow', 33.0), ('Samuel', 'Jackson', 'Nick Fury', 69.0), ('Benedict', 'Cumberbatch', 'Dr. Strange', 42.0), ('Brie', 'Larson', 'Captain Marvel', 29.0), ('Chadwick', 'Boseman', 'Black Panther', 40.0)]\n"
+      "[('Bradley', 'Dice', 'Guest Lecturer', 25), ('Robert', 'Downey Jr.', 'Iron Man', 53), ('Chris', 'Evans', 'Captain America', 37), ('Scarlett', 'Johansson', 'Black Widow', 33), ('Samuel', 'Jackson', 'Nick Fury', 69), ('Benedict', 'Cumberbatch', 'Dr. Strange', 42), ('Brie', 'Larson', 'Captain Marvel', 29), ('Chadwick', 'Boseman', 'Black Panther', 40)]\n"
      ]
     }
    ],
@@ -206,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,12 +239,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can also take user input and return dynamic data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Robert', 53)\n",
+      "('Samuel L.', 69)\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 45 # input('People older than:')\n",
+    "with sqlite3.connect(database) as conn:\n",
+    "    results = conn.execute(\n",
+    "        \"\"\"SELECT first_name, age FROM People WHERE age >= ?\"\"\",\n",
+    "        (age,))\n",
+    "    for r in results:\n",
+    "        print(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We can return specific columns by listing them after `SELECT`, and filter the rows with `WHERE`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +311,7 @@
       "Total count of people: [(8,)]\n",
       "Count by first letters of first names: [('B', 3), ('C', 2), ('R', 1), ('S', 2)]\n",
       "Average age of people: [(41.0,)]\n",
-      "Summed ages of people: [(328.0,)]\n"
+      "Summed ages of people: [(328,)]\n"
      ]
     }
    ],
@@ -287,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('table', 'People', 'People', 2, 'CREATE TABLE People\\n        (first_name TEXT, last_name TEXT, job TEXT, age REAL)')]\n"
+      "[('table', 'People', 'People', 2, 'CREATE TABLE People\\n        (first_name TEXT, last_name TEXT, job TEXT, age NUMERIC)')]\n"
      ]
     }
    ],
@@ -314,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -434,6 +484,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(12, 'Black Panther', 2018), (13, 'Avengers: Infinity War', 2018), (10, 'Captain America: Civil War', 2016), (11, 'Doctor Strange', 2016), (9, 'Avengers: Age of Ultron', 2015), (8, 'Captain America: The Winter Soldier', 2014), (7, 'Iron Man 3', 2013), (6, 'The Avengers', 2012), (4, 'Thor', 2011), (5, 'Captain America: The First Avenger', 2011), (3, 'Iron Man 2', 2010), (1, 'Iron Man', 2008), (2, 'The Incredible Hulk', 2008)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with sqlite3.connect(database) as conn:\n",
+    "    results = conn.execute(\"\"\"SELECT * FROM Movies ORDER BY year DESC\"\"\")\n",
+    "    print(list(results))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -442,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +530,7 @@
     "        first_name TEXT NOT NULL,\n",
     "        last_name TEXT NOT NULL,\n",
     "        character TEXT NOT NULL,\n",
-    "        age real NOT NULL)\"\"\")\n",
+    "        age REAL NOT NULL)\"\"\")\n",
     "    conn.executemany(\n",
     "        \"\"\"INSERT INTO Actors (first_name, last_name, character, age) VALUES (?,?,?,?)\"\"\",\n",
     "        [('Robert', 'Downey Jr.', 'Iron Man', 53),\n",
@@ -485,12 +554,12 @@
     "\n",
     "> There are only two hard things in Computer Science: cache invalidation and naming things. -- Phil Karlton\n",
     "\n",
-    "We shouldn't name this table with the reserved word [CAST](https://dev.mysql.com/doc/refman/8.0/en/cast-functions.html#function_cast). Another common naming scheme for these just concatenates the names: `MovieActors`, so we'll use that instead."
+    "We shouldn't name this table with the reserved word Cast (see [CAST](https://dev.mysql.com/doc/refman/8.0/en/cast-functions.html#function_cast)). Another common naming scheme for these just concatenates the names: `MovieActors`, so we'll use that instead."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -526,21 +595,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Iron Man', 'Iron Man'), ('The Incredible Hulk', 'Iron Man'), ('Iron Man 2', 'Iron Man'), ('The Avengers', 'Iron Man'), ('Iron Man 3', 'Iron Man'), ('Avengers: Age of Ultron', 'Iron Man'), ('Captain America: Civil War', 'Iron Man'), ('Avengers: Infinity War', 'Iron Man'), ('Captain America: The First Avenger', 'Captain America'), ('The Avengers', 'Captain America'), ('Captain America: The Winter Soldier', 'Captain America'), ('Avengers: Age of Ultron', 'Captain America'), ('Captain America: Civil War', 'Captain America'), ('Avengers: Infinity War', 'Captain America'), ('Iron Man 2', 'Black Widow'), ('The Avengers', 'Black Widow'), ('Captain America: The Winter Soldier', 'Black Widow'), ('Avengers: Age of Ultron', 'Black Widow'), ('Captain America: Civil War', 'Black Widow'), ('Avengers: Infinity War', 'Black Widow'), ('Iron Man', 'Nick Fury'), ('Iron Man 2', 'Nick Fury'), ('Thor', 'Nick Fury'), ('Captain America: The First Avenger', 'Nick Fury'), ('The Avengers', 'Nick Fury'), ('Captain America: The Winter Soldier', 'Nick Fury'), ('Avengers: Age of Ultron', 'Nick Fury'), ('Avengers: Infinity War', 'Nick Fury'), ('Doctor Strange', 'Dr. Strange'), ('Avengers: Infinity War', 'Dr. Strange'), ('Captain America: Civil War', 'Black Panther'), ('Black Panther', 'Black Panther'), ('Avengers: Infinity War', 'Black Panther')]\n"
+      "[(1, 1, 1, 1, 'Iron Man', 2008, 1, 'Robert', 'Downey Jr.', 'Iron Man', 53.0), (2, 2, 1, 2, 'The Incredible Hulk', 2008, 1, 'Robert', 'Downey Jr.', 'Iron Man', 53.0), (3, 3, 1, 3, 'Iron Man 2', 2010, 1, 'Robert', 'Downey Jr.', 'Iron Man', 53.0), (4, 6, 1, 6, 'The Avengers', 2012, 1, 'Robert', 'Downey Jr.', 'Iron Man', 53.0), (5, 7, 1, 7, 'Iron Man 3', 2013, 1, 'Robert', 'Downey Jr.', 'Iron Man', 53.0), (6, 9, 1, 9, 'Avengers: Age of Ultron', 2015, 1, 'Robert', 'Downey Jr.', 'Iron Man', 53.0), (7, 10, 1, 10, 'Captain America: Civil War', 2016, 1, 'Robert', 'Downey Jr.', 'Iron Man', 53.0), (8, 13, 1, 13, 'Avengers: Infinity War', 2018, 1, 'Robert', 'Downey Jr.', 'Iron Man', 53.0), (9, 5, 2, 5, 'Captain America: The First Avenger', 2011, 2, 'Chris', 'Evans', 'Captain America', 37.0), (10, 6, 2, 6, 'The Avengers', 2012, 2, 'Chris', 'Evans', 'Captain America', 37.0), (11, 8, 2, 8, 'Captain America: The Winter Soldier', 2014, 2, 'Chris', 'Evans', 'Captain America', 37.0), (12, 9, 2, 9, 'Avengers: Age of Ultron', 2015, 2, 'Chris', 'Evans', 'Captain America', 37.0), (13, 10, 2, 10, 'Captain America: Civil War', 2016, 2, 'Chris', 'Evans', 'Captain America', 37.0), (14, 13, 2, 13, 'Avengers: Infinity War', 2018, 2, 'Chris', 'Evans', 'Captain America', 37.0), (15, 3, 3, 3, 'Iron Man 2', 2010, 3, 'Scarlett', 'Johansson', 'Black Widow', 33.0), (16, 6, 3, 6, 'The Avengers', 2012, 3, 'Scarlett', 'Johansson', 'Black Widow', 33.0), (17, 8, 3, 8, 'Captain America: The Winter Soldier', 2014, 3, 'Scarlett', 'Johansson', 'Black Widow', 33.0), (18, 9, 3, 9, 'Avengers: Age of Ultron', 2015, 3, 'Scarlett', 'Johansson', 'Black Widow', 33.0), (19, 10, 3, 10, 'Captain America: Civil War', 2016, 3, 'Scarlett', 'Johansson', 'Black Widow', 33.0), (20, 13, 3, 13, 'Avengers: Infinity War', 2018, 3, 'Scarlett', 'Johansson', 'Black Widow', 33.0), (21, 1, 4, 1, 'Iron Man', 2008, 4, 'Samuel L.', 'Jackson', 'Nick Fury', 69.0), (22, 3, 4, 3, 'Iron Man 2', 2010, 4, 'Samuel L.', 'Jackson', 'Nick Fury', 69.0), (23, 4, 4, 4, 'Thor', 2011, 4, 'Samuel L.', 'Jackson', 'Nick Fury', 69.0), (24, 5, 4, 5, 'Captain America: The First Avenger', 2011, 4, 'Samuel L.', 'Jackson', 'Nick Fury', 69.0), (25, 6, 4, 6, 'The Avengers', 2012, 4, 'Samuel L.', 'Jackson', 'Nick Fury', 69.0), (26, 8, 4, 8, 'Captain America: The Winter Soldier', 2014, 4, 'Samuel L.', 'Jackson', 'Nick Fury', 69.0), (27, 9, 4, 9, 'Avengers: Age of Ultron', 2015, 4, 'Samuel L.', 'Jackson', 'Nick Fury', 69.0), (28, 13, 4, 13, 'Avengers: Infinity War', 2018, 4, 'Samuel L.', 'Jackson', 'Nick Fury', 69.0), (29, 11, 5, 11, 'Doctor Strange', 2016, 5, 'Benedict', 'Cumberbatch', 'Dr. Strange', 42.0), (30, 13, 5, 13, 'Avengers: Infinity War', 2018, 5, 'Benedict', 'Cumberbatch', 'Dr. Strange', 42.0), (31, 10, 7, 10, 'Captain America: Civil War', 2016, 7, 'Chadwick', 'Boseman', 'Black Panther', 40.0), (32, 12, 7, 12, 'Black Panther', 2018, 7, 'Chadwick', 'Boseman', 'Black Panther', 40.0), (33, 13, 7, 13, 'Avengers: Infinity War', 2018, 7, 'Chadwick', 'Boseman', 'Black Panther', 40.0)]\n"
      ]
     }
    ],
    "source": [
     "with sqlite3.connect(database) as conn:\n",
     "    results = conn.execute(\n",
-    "        \"\"\"SELECT Movies.title, Actors.character FROM MovieActors\n",
+    "        \"\"\"SELECT * FROM MovieActors\n",
     "        JOIN Movies ON MovieActors.movie_id = Movies.id\n",
     "        JOIN Actors ON MovieActors.actor_id = Actors.id\"\"\")\n",
     "    print(list(results))"
@@ -555,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
