Added example of searching a database with LIKE.

--- a/source/notebooks/lecture18_databases.ipynb
+++ b/source/notebooks/lecture18_databases.ipynb
@@ -314,7 +314,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -349,7 +348,7 @@
       "Downloading database.\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 1042k  100 1042k    0     0   165k      0  0:00:06  0:00:06 --:--:--  207k 0     0  99316      0  0:00:10  0:00:02  0:00:08 99278\n",
+      "100 1042k  100 1042k    0     0  1797k      0 --:--:-- --:--:-- --:--:-- 1973k\n",
       "Done. Check that the file exists:\n",
       "Chinook.sqlite\n"
      ]
@@ -745,13 +744,13 @@
     "\n",
     "from IPython.display import display\n",
     "\n",
-    "def get_results(sql):\n",
+    "def get_results(sql, *args, **kwargs):\n",
     "    with sqlite3.connect(database) as conn:\n",
-    "        df = pd.read_sql(sql, conn)\n",
+    "        df = pd.read_sql(sql, conn, *args, **kwargs)\n",
     "    return df\n",
     "\n",
-    "def show_results(sql):\n",
-    "    display(get_results(sql))\n",
+    "def show_results(sql, *args, **kwargs):\n",
+    "    display(get_results(sql, *args, **kwargs))\n",
     "\n",
     "show_results(\"\"\"SELECT * FROM sqlite_master\"\"\")"
    ]
@@ -2328,7 +2327,7 @@
        "      <th>0</th>\n",
        "      <td>1150.00</td>\n",
        "      <td>None</td>\n",
-       "      <td>India</td>\n",
+       "      <td>Germany</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2486,7 +2485,7 @@
       ],
       "text/plain": [
        "    Spending   State     Location\n",
-       "0    1150.00    None        India\n",
+       "0    1150.00    None      Germany\n",
        "1     115.86      CA          USA\n",
        "2     114.86      SP       Brazil\n",
        "3      75.24      ON       Canada\n",
@@ -3567,6 +3566,128 @@
     "JOIN Artist on Album.ArtistId = Artist.ArtistId\n",
     "GROUP BY Artist.Name ORDER BY ArtistSales DESC\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Searching Databases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ArtistId</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>84</td>\n",
+       "      <td>Foo Fighters</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ArtistId          Name\n",
+       "0        84  Foo Fighters"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ArtistId</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>48</td>\n",
+       "      <td>Barão Vermelho</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>213</td>\n",
+       "      <td>Scholars Baroque Ensemble</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>224</td>\n",
+       "      <td>Barry Wordsworth &amp; BBC Concert Orchestra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>273</td>\n",
+       "      <td>C. Monteverdi, Nigel Rogers - Chiaroscuro; Lon...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ArtistId                                               Name\n",
+       "0        48                                     Barão Vermelho\n",
+       "1       213                          Scholars Baroque Ensemble\n",
+       "2       224           Barry Wordsworth & BBC Concert Orchestra\n",
+       "3       273  C. Monteverdi, Nigel Rogers - Chiaroscuro; Lon..."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_results(\"\"\"SELECT * FROM Artist WHERE Name LIKE (?)\"\"\", params=('%foo%',))\n",
+    "show_results(\"\"\"SELECT * FROM Artist WHERE Name LIKE (?)\"\"\", params=('%bar%',))"
    ]
   },
   {
