--- a/source/notebooks/lecture22_visualization_cont.ipynb
+++ b/source/notebooks/lecture22_visualization_cont.ipynb
@@ -1568,7 +1568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rather than a histogram, we can get a smooth estimate of the distribution using a kernel density estimation, which Seaborn does with ``sns.kdeplot``:"
+    "Rather than a histogram, we can get a smooth estimate of the distribution using a [kernel density estimation](https://arxiv.org/abs/1704.03924) (a standard method to estimate the probability density function of a random variable), which Seaborn does with ``sns.kdeplot``:"
    ]
   },
   {
