--- a/source/notebooks/lecture23_intro_ml.ipynb
+++ b/source/notebooks/lecture23_intro_ml.ipynb
@@ -40,7 +40,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/lect24_ML_overview.png)"
+    "![](images/lect24_ML_overview.png)\n",
+    "from [Ferguson, AL, \"Machine learning and data science in soft materials engineering,\" **2018** *J. Phys.: Condens. Matter* **30** 043002](https://doi.org/10.1088/1361-648X/aa98bd)"
    ]
   },
   {
@@ -77,7 +78,7 @@
     "From these features and labels, we would like to create a model that will let us decide whether a new point should be labeled \"blue\" or \"red.\"\n",
     "\n",
     "There are a number of possible models for such a classification task, but here we will use an extremely simple one. We will make the assumption that the two groups can be separated by drawing a straight line through the plane between them, such that points on each side of the line fall in the same group.\n",
-    "Here the *model* is a quantitative version of the statement \"a straight line separates the classes\", while the *model parameters* are the particular numbers describing the location and orientation of that line for our data.\n",
+    "**Here the *model* is a quantitative version of the statement \"a straight line separates the classes\", while the *model parameters* are the particular numbers describing the location and orientation of that line for our data.**\n",
     "The optimal values for these model parameters are learned from the data (this is the \"learning\" in machine learning), which is often called *training the model*.\n",
     "\n",
     "The following figure shows a visual representation of what the trained model looks like for this data:\n",
@@ -100,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the basic idea of a classification task in machine learning, where \"classification\" indicates that the data has discrete class labels.\n",
+    "This is the basic idea of a classification task in machine learning, where **\"classification\" indicates that the data has discrete class labels.**\n",
     "At first glance this may look fairly trivial: it would be relatively easy to simply look at this data and draw such a discriminatory line to accomplish this classification.\n",
     "A benefit of the machine learning approach, however, is that it can generalize to much larger datasets in many more dimensions.\n",
     "\n",
