Final homework added

--- a/source/notebooks/lecture25_intro_scikit-learn_cont.ipynb
+++ b/source/notebooks/lecture25_intro_scikit-learn_cont.ipynb
@@ -375,7 +375,7 @@
     "- For very high model complexity (a high-variance model), the training data is over-fit, which means that the model predicts the training data very well, but fails for any previously unseen data.\n",
     "- For some intermediate value, the validation curve has a maximum. This level of complexity indicates a suitable trade-off between bias and variance.\n",
     "\n",
-    "The means of tuning the model complexity varies from model to model; this book discusses some individual models in depth in later sections, and discusses how each model allows for such tuning."
+    "The means of tuning the model complexity varies from model to model; [this book](https://jakevdp.github.io/PythonDataScienceHandbook/) discusses some individual models in depth in later sections of chapter 5, and discusses how each model allows for such tuning."
    ]
   },
   {
@@ -536,7 +536,6 @@
    ],
    "source": [
     "from sklearn.model_selection import validation_curve\n",
-    "from matplotlib import ticker\n",
     "degree = np.arange(0, 21)\n",
     "#cv stands for cross-validation; the integer given is the K in Kfold cv\n",
     "train_score, val_score = validation_curve(PolynomialRegression(), X, y,\n",
@@ -674,7 +673,7 @@
     "The solid lines show the new results, while the fainter dashed lines show the results of the previous smaller dataset.\n",
     "It is clear from the validation curve that the larger dataset can support a much more complicated model: the peak here is probably around a degree of 6, but even a degree-20 model is not seriously over-fitting the data—the validation and training scores remain very close.\n",
     "\n",
-    "Thus we see that the behavior of the validation curve has not one but two important inputs: the model complexity and the number of training points.\n",
+    "Thus we see that the behavior of the validation curve has not one but **two important inputs: the model complexity and the number of training points.**\n",
     "It is often useful to to explore the behavior of the model as a function of the number of training points, which we can do by using increasingly larger subsets of the data to fit our model.\n",
     "A plot of the training/validation score with respect to the size of the training set is known as a *learning curve.*\n",
     "\n",
